# Ataxx-AI

./: CMakeLists.txt  README.md  constants.cpp  game_logic.cpp  game_logic.h  main.cpp  types.h  utility.cpp  utility.h
